2002-08-06  Federico Mena Quintero  <federico@ximian.com>

	Fixes #82194.

	* icons/text-selection-frame.png: Made the base frame image white
	with rounded corners over a transparent background.

	* libnautilus-private/nautilus-icon-container.c
	(nautilus_icon_container_theme_changed): If the theme does not
	specify a color for the text highlight color, use the widget
	style's base[GTK_STATE_SELECTED].

	* libnautilus-private/nautilus-icon-canvas-item.c
	(draw_or_measure_label_text): Multiply the (white) selection
	pixbuf by the highlight color so that we get a tinted pixbuf with
	proper alpha.

=== nautilus 2.0.3 ===
	
2002-08-05  Dave Camp  <dave@ximian.com>

	* NEWS: updated.
	* configure.in: 2.0.3

2002-08-02  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-icon-factory.c
	(path_represents_svg_image): don't do a synchronous mime
	sniff on every icon we load.

2002-08-02  Thomas Meeks  <thomas@imaginator.com>

	* libnautilus-private/nautilus-icon-factory.c
	(nautilus_gdk_pixbuf_supported): impl. we need
	this to detect small, local image files that gdk-pixbuf
	can't render.
	(nautilus_icon_factory_get_icon_for_file): fix logic
	bug, so that we do get_thumbnail_uri for small, local
	images that may be tractable to 'convert'.

2002-08-01  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c:
	(start_rubberbanding): Get the selection color from the gtk theme
	if none is specified in the nautilus theme. 
	(realize): Use gtk_widget_modify_bg() to set the background color.
	(style_set): Call nautilus_icon_container_theme_changed(), as
	changes to the style can now affect the theme.

2002-07-31  Frank Worsley  <fworsley@shaw.ca>

	* libnautilus-private/nautilus-program-choosing.c:
	(nautilus_launch_desktop_file):
	be smarter about appending local paths or uris to command

2002-07-31  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c: