@@ -1,3 +1,12 @@
+2002-07-02  Jody Goldberg <jody@gnome.org>
+
+	* libnautilus-private/nautilus-program-chooser.c
+	(launch_mime_capplet) : That a NautilusFile and pass both the mime
+	  type and the name to the capplet so that it can make more
+	  intelligent defaults if necessary.
+	(launch_mime_capplet_on_ok) : adjust to changes in launch_mime_capplet.
+	(launch_mime_capplet_and_close_dialog) : ditto.
+
 2002-08-06  Federico Mena Quintero  <federico@ximian.com>
 
 	Fixes #82194.
